[package]
name = "kudos"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
cfg-if = "1.0.0"
http = "1.1.0"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "json"] }
tracing-web = "0.1.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
